--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -15,9 +15,26 @@ h1 {
   text-align: center;
   padding: 2rem;
   color: var(--light-color);
-  text-shadow: 2px 2px var(--dark-color);
+  text-shadow: 2px 2px 2px var(--dark-color);
   font-size: 3rem;
   margin: 0;
+}
+
+h2 {
+  background-color: var(--light-color);
+  padding: 1rem;
+  border: solid 2px var(--dark-color);
+}
+
+p {
+  font-size: 1.5rem;
+}
+
+.introduction {
+  text-align: center;
+  max-width: 80%;
+  margin: 0 auto;
+  margin-bottom: 3rem;
 }
 
 .button-container {
@@ -32,7 +49,8 @@ h1 {
 .items {
   display: flex;
   flex-direction: column;
-  gap: 50vh;
+  align-items: center;
+  gap: 30vh;
 }
 
 .pictures {
@@ -40,4 +58,7 @@ h1 {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  border: solid 2px var(--dark-color);
+  background-color: var(--secondary-color);
+  max-width: 80%;
 }
