--- a/css/mood_2.css
+++ b/css/mood_2.css
@@ -8,11 +8,64 @@
 
 body {
   color: var(--light-color);
-  background-color: var(--dark-color);
+  background-color: var(--accent-color);
+}
+
+h1 {
+  text-align: center;
+  padding: 2rem;
+  color: var(--light-color);
+  text-shadow: 2px 2px 2px var(--dark-color);
+  font-size: 3rem;
+  margin: 0;
+}
+
+h2 {
+  background-color: var(--light-color);
+  padding: 1rem;
+  border: solid 2px var(--dark-color);
+  color: var(--dark-color);
+}
+
+p {
+  color: var(--dark-color);
+  font-size: 1.5rem;
+}
+
+.introduction {
+  text-align: center;
+  max-width: 80%;
+  margin: 0 auto;
+  margin-bottom: 3rem;
+}
+
+.intro-header {
+  border: none;;
+  background-color: var(--accent-color);
+}
+
+.button-container {
+  background-color: var(--primary-color);
+  border-color: var(--dark-color);
+}
+
+#mood_btn {
+  background-color: var(--light-color);
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30vh;
 }
 
 .pictures {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: solid 2px var(--dark-color);
+  background-color: var(--secondary-color);
+  max-width: 80%;
 }
