--- a/css/mood_2.css
+++ b/css/mood_2.css
@@ -32,6 +32,10 @@ p {
   font-size: 1.5rem;
 }
 
+footer p {
+  color: var(--light-color)
+}
+
 .introduction {
   text-align: center;
   max-width: 80%;
